# diploma

./: .gitignore  CMakeLists.txt  README.md  TaskVKR.pages
generated_matrices/order_12/: eq_1_common.txt  eq_1_pm_view.txt
generated_matrices/order_16/: eq_1_common.txt  eq_1_pm_view.txt
generated_matrices/order_2/: eq_1_common.txt  eq_1_pm_view.txt
generated_matrices/order_20/: eq_1_common.txt  eq_1_pm_view.txt
generated_matrices/order_24/: eq_1_common.txt  eq_1_pm_view.txt
generated_matrices/order_4/: eq_1_common.txt  eq_1_pm_view.txt  eq_2_common.txt  eq_2_pm_view.txt
generated_matrices/order_8/: eq_100_common.txt  eq_100_pm_view.txt  eq_101_common.txt  eq_101_pm_view.txt  eq_102_common.txt  eq_102_pm_view.txt  eq_103_common.txt  eq_103_pm_view.txt  eq_104_common.txt  eq_104_pm_view.txt  eq_105_common.txt  eq_105_pm_view.txt  eq_106_common.txt  eq_106_pm_view.txt  eq_107_common.txt  eq_107_pm_view.txt  eq_108_common.txt  eq_108_pm_view.txt  eq_109_common.txt  eq_109_pm_view.txt  eq_10_common.txt  eq_10_pm_view.txt  eq_110_common.txt  eq_110_pm_view.txt  eq_111_pm_view.txt  eq_112_common.txt  eq_112_pm_view.txt  eq_113_common.txt  eq_113_pm_view.txt  eq_114_common.txt  eq_114_pm_view.txt  eq_115_common.txt  eq_115_pm_view.txt  eq_116_common.txt  eq_116_pm_view.txt  eq_117_common.txt  eq_117_pm_view.txt  eq_118_common.txt  eq_118_pm_view.txt  eq_119_pm_view.txt  (+912 more)
include/bucket/: bucket.h
include/hadamard_matrix/: hadamard_matrix.h
include/matrix/: matrix.h
include/matrix_printer/: matrix_printer.h
include/row/: row.h
include/thread_safe_set/: thread_safe_set.h
include/utils/: cli_args_parser.h  debug.h  mm_finder.h  mode.h  q_classifier.h
matrices/: 12.txt  16_0.txt  16_2.txt  20_1.txt  24_0.txt  24_1.txt  28_0.txt  28_1.txt  28_2.txt
matrices/16/: 16_1.txt  16_4.txt
matrices/20/: 20_1.txt  20_hall.txt  20_tonchev3.txt  20_will.txt
matrices/24/: 24_1.txt  24_11.txt  24_2.txt  24_3.txt  24_4.txt  24_42.txt  24_59.txt
matrices/8/: 8.txt
matrices/ar/: 20.txt  24.txt  28.txt
report/: TitleVKR.pages
scripts/: draw_grid.py  draw_plots.py  parse_dir.py
src/: main.cpp
src/bucket/: bucket.cpp
src/row/: row.cpp
(+29 files in other folders)
